--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,74 @@
-body{background-color:Orange;
-     color:Blue;}
-h2{font-size:35px; font-weight:bolder}
-h4{color:Black;font-size:25px; font-weight:bold;}
-h1{font-size:40px}
-a{font-size:22px;
-  color:darkgreen;}
-p{color:Black; font-size:18px}
-li{font-size:22px;}
+
+.section-header{font-size:6em;
+padding-right:40px;
+}
+
+.section-top{background:black; color:white; padding-bottom:40px; padding-top:40px; border-style:solid; border-color:red;}
+.sec1{
+background-color:#d1d1d1;
+}
+.body-content{
+  display:flex;
+  flex-flow:column nowrap;
+  
+}
+
+.sec1, .sec2{
+  display:flex;
+  align-items:center;
+  margin-bottom:50px;
+  justify-content:center;
+}
+.section-content{font-size:1.5em; padding-left:50px; border-style:solid; line-height:50px}
+
+
+.sec-title{
+  background-size: cover;
+  background-repeat:no-repeat;
+  color:white;
+  
+}
+#Shawshank{background-image:url(http://www.virgeweb.com/rage2/hd/shawshank1.jpg);
+  font-family: 'Old Standard TT', serif;
+}
+#WorldWarZ{background-image:url(http://1.bp.blogspot.com/-ddSJjtUL09c/UbPJLvvEMdI/AAAAAAAABN4/II9D051gJXM/s1600/WorldWarZ_200-s6-c30.jpg);
+  background-size:cover;;}
+
+
+#Yellow-Submarine{
+  background-image:url("http://www.goldmine1969.com/main/wp-content/uploads/toomuch.jpg");
+  background-repeat:no-repeat;
+  color:yellow;
+  font-family: 'Fascinate Inline', cursive;
+}
+
+#Monty-Python{
+  background-image:url("https://secure.static.tumblr.com/2cd165e8d77981fb14fe590481662455/ve3lwl9/2Don1opha/tumblr_static_holy-grail.jpg");
+  color:yellow;
+  font-family: 'UnifrakturMaguntia', cursive;
+  background-repeat:no-repeat;
+  vertical-align:middle;
+}
+header{
+  font-size:6em;
+  font-family: 'Jura', sans-serif;
+  background-image:url(https://static1.squarespace.com/static/5638e37ae4b0bcbea32a1523/t/584a1698cd0f68ddbf006817/1481250457452/game%2Bdesign.png?format=2500w);
+  background-size:100% 100%;
+  color:#090;
+  padding:100px;
+  padding-left:200px;
+  padding-right:200px;
+  margin-bottom:100px;
+  text-align:center;
+}
+
+@media(max-width:1000px)
+{
+  .sec1, .sec2{
+    flex-flow:row wrap;
+  }
+  
+  #WorldWarZ{
+    color:lawngreen;
+  }
+}
