--- a/css/main.css
+++ b/css/main.css
@@ -89,4 +89,8 @@ header{
   }
   .section-header{font-size:4em;
 }
+     #Yellow-Submarine{
+    padding-top:100px;
+    padding-bottom:100px;
+  }
 }
