Fixed Profile Image(maybe)

--- a/css/main.css
+++ b/css/main.css
@@ -51,6 +51,8 @@ background-color:#d1d1d1;
 }
 header{
   font-size:6em;
+  display:flex;
+  flex-flow:row wrap;
   font-family: 'Jura', sans-serif;
   background-image:url(https://static1.squarespace.com/static/5638e37ae4b0bcbea32a1523/t/584a1698cd0f68ddbf006817/1481250457452/game%2Bdesign.png?format=2500w);
   background-size:100% 100%;
