--- a/css/main.css
+++ b/css/main.css
@@ -52,6 +52,8 @@ background-color:#d1d1d1;
 header{
   font-size:6em;
   font-family: 'Jura', sans-serif;
+  display:flex;
+  flex-flow:row wrap;
   background-image:url(https://static1.squarespace.com/static/5638e37ae4b0bcbea32a1523/t/584a1698cd0f68ddbf006817/1481250457452/game%2Bdesign.png?format=2500w);
   background-size:100% 100%;
   color:#090;
@@ -64,7 +66,8 @@ header{
 
 #profile-image
 {
-  max-width: 25%;
+  max-width: 50%;
+  width:50%;
 }
 #AboutMe{
   font-family: 'Playfair Display', serif;
