--- a/css/main.css
+++ b/css/main.css
@@ -67,8 +67,8 @@ header{
 
 #profile-image
 {
-  max-width: 50%;
-  max-height: 50%;
+  max-width: 200px 50%;
+  max-height: 200px 50%;
   width:200px;
   height:200px;
 }
