--- a/css/main.css
+++ b/css/main.css
@@ -50,23 +50,29 @@ background-color:#d1d1d1;
   vertical-align:middle;
 }
 header{
-  font-size:6em;
-  font-family: 'Jura', sans-serif;
+
   display:flex;
   flex-flow:column wrap;
   align-items: center;
   background-image:url(https://static1.squarespace.com/static/5638e37ae4b0bcbea32a1523/t/584a1698cd0f68ddbf006817/1481250457452/game%2Bdesign.png?format=2500w);
   background-size:100% 100%;
-  color:#090;
   padding:100px;
   padding-left:200px;
   padding-right:200px;
   margin-bottom:100px;
-  text-align:center;
+
+}
+
+#header-content{
+
+  font-size:6em;
+  font-family: 'Jura', sans-serif;
+  color:#090;
 }
 
 #profile-image
 {
+  display: block;
   max-width: 200px 50%;
   max-height: 200px 50%;
   width:200px;
