--- a/css/main.css
+++ b/css/main.css
@@ -73,6 +73,7 @@ header{
 #profile-image
 {
   display: block;
+  border-radius:50px;
   max-width: 200px 50%;
   max-height: 200px 50%;
   width:200px;
