--- a/css/main.css
+++ b/css/main.css
@@ -31,8 +31,9 @@ background-color:#d1d1d1;
 #Shawshank{background-image:url(http://www.virgeweb.com/rage2/hd/shawshank1.jpg);
   font-family: 'Old Standard TT', serif;
 }
-#WorldWarZ{background-image:url(http://1.bp.blogspot.com/-ddSJjtUL09c/UbPJLvvEMdI/AAAAAAAABN4/II9D051gJXM/s1600/WorldWarZ_200-s6-c30.jpg);
-  background-size:contain;}
+#WorldWarZ{background:url(http://1.bp.blogspot.com/-ddSJjtUL09c/UbPJLvvEMdI/AAAAAAAABN4/II9D051gJXM/s1600/WorldWarZ_200-s6-c30.jpg) no-repeat center;
+  background-size:contain;
+  background-origin:border-box;}
 
 
 #Yellow-Submarine{
@@ -43,10 +44,10 @@ background-color:#d1d1d1;
 }
 
 #Monty-Python{
-  background-image:url("https://secure.static.tumblr.com/2cd165e8d77981fb14fe590481662455/ve3lwl9/2Don1opha/tumblr_static_holy-grail.jpg");
+  background:url("https://secure.static.tumblr.com/2cd165e8d77981fb14fe590481662455/ve3lwl9/2Don1opha/tumblr_static_holy-grail.jpg") no-repeat center;
   color:yellow;
   font-family: 'UnifrakturMaguntia', cursive;
-  background-repeat:no-repeat;
+  
   vertical-align:middle;
 }
 header{
