Added Padding to the Monty Python

--- a/css/main.css
+++ b/css/main.css
@@ -47,7 +47,7 @@ background-color:#d1d1d1;
   background:url("https://secure.static.tumblr.com/2cd165e8d77981fb14fe590481662455/ve3lwl9/2Don1opha/tumblr_static_holy-grail.jpg") no-repeat center;
   color:yellow;
   font-family: 'UnifrakturMaguntia', cursive;
-
+  padding-right: 3em;
   vertical-align:middle;
 }
 .header{
