trying to fix world war z

--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,10 @@ background-color:#d1d1d1;
   background-size:contain;
   background-origin:border-box;}
 
+.worldwarz{
+  margin-bottom:0;
+  font-size:5em;
+}
 
 #Yellow-Submarine{
   background-image:url("http://www.goldmine1969.com/main/wp-content/uploads/toomuch.jpg");
