--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,7 @@ background-color:#d1d1d1;
   font-family: 'Old Standard TT', serif;
 }
 #WorldWarZ{background:url(http://1.bp.blogspot.com/-ddSJjtUL09c/UbPJLvvEMdI/AAAAAAAABN4/II9D051gJXM/s1600/WorldWarZ_200-s6-c30.jpg) no-repeat center;
-  background-size:contain;
+  background-size:auto;
   background-origin:border-box;}
 
 .worldwarz{
