More fixes to World War Z

--- a/css/main.css
+++ b/css/main.css
@@ -40,6 +40,11 @@ background-color:#d1d1d1;
   font-size:5em;
 }
 
+#WorldWarZ h3
+{
+  color:black;
+  font-size:2.5em;
+}
 #Yellow-Submarine{
   background-image:url("http://www.goldmine1969.com/main/wp-content/uploads/toomuch.jpg");
   background-repeat:no-repeat;
