--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-
+/**Main Formatting**/
 .section-header{font-size:6em;
 padding-right:40px;
 }
@@ -28,37 +28,9 @@ background-color:#d1d1d1;
   color:white;
 
 }
-#Shawshank{background-image:url(http://www.virgeweb.com/rage2/hd/shawshank1.jpg);
-  font-family: 'Old Standard TT', serif;
-}
-#WorldWarZ{background:url(http://1.bp.blogspot.com/-ddSJjtUL09c/UbPJLvvEMdI/AAAAAAAABN4/II9D051gJXM/s1600/WorldWarZ_200-s6-c30.jpg) no-repeat center;
-  background-size:cover;
-  background-origin:border-box;}
+/**********************************************************************/
 
-.worldwarz{
-  margin-bottom:0;
-  font-size:5em;
-}
-
-#WorldWarZ h1
-{
-  color:lawngreen;
-  font-size:3.75em;
-}
-#Yellow-Submarine{
-  background-image:url("http://www.goldmine1969.com/main/wp-content/uploads/toomuch.jpg");
-  background-repeat:no-repeat;
-  color:yellow;
-  font-family: 'Fascinate Inline', cursive;
-}
-
-#Monty-Python{
-  background:url("https://secure.static.tumblr.com/2cd165e8d77981fb14fe590481662455/ve3lwl9/2Don1opha/tumblr_static_holy-grail.jpg") no-repeat center;
-  color:yellow;
-  font-family: 'UnifrakturMaguntia', cursive;
-  padding-right: 3em;
-  vertical-align:middle;
-}
+/************Formating for top of page********************************/
 .header{
 
   display:flex;
@@ -112,9 +84,43 @@ background-color:#d1d1d1;
   width:200px;
   height:200px;
 }
+
+/*************************************************************************************************/
 #AboutMe{
   font-family: 'Playfair Display', serif;
 }
+#Shawshank{background-image:url(http://www.virgeweb.com/rage2/hd/shawshank1.jpg);
+  font-family: 'Old Standard TT', serif;
+}
+#WorldWarZ{background:url(http://1.bp.blogspot.com/-ddSJjtUL09c/UbPJLvvEMdI/AAAAAAAABN4/II9D051gJXM/s1600/WorldWarZ_200-s6-c30.jpg) no-repeat center;
+  background-size:cover;
+  background-origin:border-box;}
+
+.worldwarz{
+  margin-bottom:0;
+  font-size:5em;
+}
+
+#WorldWarZ h1
+{
+  color:lawngreen;
+  font-size:3.75em;
+}
+#Yellow-Submarine{
+  background-image:url("http://www.goldmine1969.com/main/wp-content/uploads/toomuch.jpg");
+  background-repeat:no-repeat;
+  color:yellow;
+  font-family: 'Fascinate Inline', cursive;
+}
+
+#Monty-Python{
+  background:url("https://secure.static.tumblr.com/2cd165e8d77981fb14fe590481662455/ve3lwl9/2Don1opha/tumblr_static_holy-grail.jpg") no-repeat center;
+  color:yellow;
+  font-family: 'UnifrakturMaguntia', cursive;
+  padding-right: 3em;
+  vertical-align:middle;
+}
+
 @media(max-width:1000px)
 {
   .sec1, .sec2{
