--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
 padding-right:40px;
 }
 
-.section-top{background:black; color:white; padding-bottom:40px; padding-top:40px; border-style:solid; border-color:red; font-family: 'Playfair Display', serif; font-weight: bold;}
+.section-top{background:black; color:white; padding-bottom:40px; padding-top:40px; font-family: 'Playfair Display', serif; font-weight: bold;}
 .sec1{
 background-color:#d1d1d1;
 }
@@ -19,7 +19,7 @@ background-color:#d1d1d1;
   margin-bottom:50px;
   justify-content:center;
 }
-.section-content{font-size:1.5em; padding-left:50px; border-style:solid; line-height:50px}
+.section-content{font-size:1.5em; padding-left:50px; line-height:50px}
 
 .aboutme{ background: white; background-origin: border-box;}
 .sec-title{
